syntax = "proto3";

package com.hugo.demo.api.product;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message AddProductRequestDTO {
  string metal_id = 1;
  string product_name = 2;
  string description = 3;
  int64 provider_id = 4;
  double price = 5;
}

message EditProductRequestDTO {
  string metal_id = 1;
  int64 provider_id = 2;
  string product_name = 3;
  string description = 4;
  double price = 5;
}

message ProductResponseDTO {
  string metal_id = 1;
  int64 provider_id = 2;
  string product_name = 3;
  string description = 4;
  double price = 5;
}

message AllProductsResponseDTO {
  repeated ProductResponseDTO products = 1;
}

message DeleteProductRequestDTO {
  string metal_id = 1;
  int64 provider_id = 2;
}

message GetProductsByProviderIdRequestDTO {
  int64 provider_id = 1;
  int32 page = 2;
  int32 size = 3;
  string sort_field = 4;
  string sort_order = 5;
}

message GetProductsByMetalCodeRequestDTO {
  string metal_id = 1;
  int32 page = 2;
  int32 size = 3;
  string sort_field = 4;
  string sort_order = 5;
}

message GetProductsByProviderIdResponseDTO {
  repeated ProductResponseDTO products = 1;
  int32 total_pages = 2;
  int32 total_items = 3;
}

message GetProductsByMetalCodeResponseDTO {
  repeated ProductResponseDTO products = 1;
  int32 total_pages = 2;
  int32 total_items = 3;
}
